--- a/index.html
+++ b/index.html
@@ -17,19 +17,25 @@
         content="Transformando el futuro de los cultivos">
 
 
-    <!-- <meta property="og:type" content="website">
-    <meta property="og:url" content="https://alexcgdesign.github.io">
-    <meta property="og:title" content="Aprende CSS desde cero">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://comofueps.github.io/">
+    <meta property="og:title" content="Aprende Agricultura inteligente desde cero">
     <meta property="og:description"
-        content="Hola, soy una descripción que verás cuando busques algo de mi temática en Google.">
-    <meta property="og:image" content="https://alexcgdesign.github.io/images/css.jpg">
+        content="¡Descubre el potencial de la tierra y la tecnología! Domina las
+        herramientas más avanzadas para cultivar de manera eficiente y sostenible. Aprende sobre
+        sensores, análisis de datos, automatización y prácticas innovadoras que revolucionarán tu forma
+        de cultivar. Únete a nosotros y conviértete en un pionero de la agricultura del mañana.">
+    <meta property="og:image" content="https://comofueps.github.io/images/hero.png">
 
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://www.jordanalex.com/">
-    <meta property="twitter:title" content="Aprende CSS desde cero">
+    <meta property="twitter:url" content="https://comofueps.github.io/">
+    <meta property="twitter:title" content="Aprende Agricultura inteligente desde cero">
     <meta property="twitter:description"
-        content="Hola, soy una descripción que verás cuando busques algo de mi temática en Google.">
-    <meta property="twitter:image" content="https://alexcgdesign.github.io/images/css.jpg"> -->
+        content="¡Descubre el potencial de la tierra y la tecnología! Domina las
+        herramientas más avanzadas para cultivar de manera eficiente y sostenible. Aprende sobre
+        sensores, análisis de datos, automatización y prácticas innovadoras que revolucionarán tu forma
+        de cultivar. Únete a nosotros y conviértete en un pionero de la agricultura del mañana.">
+    <meta property="twitter:image" content="https://comofueps.github.io/images/hero.png">
 </head>
 
 <body>
