--- a/index.html
+++ b/index.html
@@ -13,29 +13,29 @@
     <meta name="theme-color" content="#2091F9">
 
     <meta name="title" content="Aprende Agricultura Inteligente desde cero">
-    <meta name="description"
-        content="Transformando el futuro de los cultivos">
+    <meta name="description" content="Transformando el futuro de los cultivos">
 
 
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://comofueps.github.io/">
-    <meta property="og:title" content="Aprende Agricultura inteligente desde cero">
-    <meta property="og:description"
-        content="¡Descubre el potencial de la tierra y la tecnología! Domina las
-        herramientas más avanzadas para cultivar de manera eficiente y sostenible. Aprende sobre
-        sensores, análisis de datos, automatización y prácticas innovadoras que revolucionarán tu forma
-        de cultivar. Únete a nosotros y conviértete en un pionero de la agricultura del mañana.">
-    <meta property="og:image" content="https://comofueps.github.io/images/hero.png">
+    <!-- Primary Meta Tags -->
+    <title>Agricultura inteligente</title>
+    <meta name="title" content="Agricultura inteligente" />
+    <meta name="description" content="Transformando el futuro de los cultivos" />
 
-    <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://comofueps.github.io/">
-    <meta property="twitter:title" content="Aprende Agricultura inteligente desde cero">
-    <meta property="twitter:description"
-        content="¡Descubre el potencial de la tierra y la tecnología! Domina las
-        herramientas más avanzadas para cultivar de manera eficiente y sostenible. Aprende sobre
-        sensores, análisis de datos, automatización y prácticas innovadoras que revolucionarán tu forma
-        de cultivar. Únete a nosotros y conviértete en un pionero de la agricultura del mañana.">
-    <meta property="twitter:image" content="https://comofueps.github.io/images/hero.png">
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://comofueps.github.io/" />
+    <meta property="og:title" content="Agricultura inteligente" />
+    <meta property="og:description" content="Transformando el futuro de los cultivos" />
+    <meta property="og:image" content="https://comofueps.github.io/images/hero.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://comofueps.github.io/" />
+    <meta property="twitter:title" content="Agricultura inteligente" />
+    <meta property="twitter:description" content="Transformando el futuro de los cultivos" />
+    <meta property="twitter:image" content="https://comofueps.github.io/images/hero.png" />
+
+    <!-- Meta Tags Generated with https://metatags.io -->
 </head>
 
 <body>
@@ -254,7 +254,9 @@
                             </span>
                         </h3>
 
-                        <p class="questions__show">Este curso está diseñado para agricultores, estudiantes de agronomía, profesionales del campo y cualquier persona interesada en aprender sobre la implementación de tecnología en la agricultura.</p>
+                        <p class="questions__show">Este curso está diseñado para agricultores, estudiantes de agronomía,
+                            profesionales del campo y cualquier persona interesada en aprender sobre la implementación
+                            de tecnología en la agricultura.</p>
                     </div>
                 </article>
 
@@ -266,7 +268,9 @@
                             </span>
                         </h3>
 
-                        <p class="questions__show">No se necesitan conocimientos previos en tecnología. El curso está estructurado para ser comprensible y beneficioso tanto para principiantes como para personas con experiencia en el campo.</p>
+                        <p class="questions__show">No se necesitan conocimientos previos en tecnología. El curso está
+                            estructurado para ser comprensible y beneficioso tanto para principiantes como para personas
+                            con experiencia en el campo.</p>
                     </div>
                 </article>
 
@@ -278,14 +282,22 @@
                             </span>
                         </h3>
 
-                        <p class="questions__show">Al completar este curso, los participantes obtendrán conocimientos en agricultura de precisión, integración de sensores, análisis de datos, técnicas de automatización y prácticas sostenibles, todo lo cual les permitirá mejorar la eficiencia y productividad en sus cultivos.</p>
+                        <p class="questions__show">Al completar este curso, los participantes obtendrán conocimientos en
+                            agricultura de precisión, integración de sensores, análisis de datos, técnicas de
+                            automatización y prácticas sostenibles, todo lo cual les permitirá mejorar la eficiencia y
+                            productividad en sus cultivos.</p>
                     </div>
                 </article>
             </section>
 
             <section class="questions__offer">
                 <h2 class="subtitle">¿Estas listo para aprender Agricultura Inteligente?</h2>
-                <p class="questions__copy">Sumérgete en el futuro de la agricultura con nuestro curso especializado en Agricultura Inteligente. Si estás ansioso por descubrir las herramientas innovadoras que están transformando la manera en que cultivamos y si buscas maximizar la eficiencia de tus cultivos, ¡este curso es para ti! Prepárate para adquirir conocimientos en tecnología aplicada a la agricultura, desde sensores y análisis de datos hasta estrategias de automatización y prácticas sostenibles. ¡Únete a nosotros para cultivar el mañana hoy mismo!</p>
+                <p class="questions__copy">Sumérgete en el futuro de la agricultura con nuestro curso especializado en
+                    Agricultura Inteligente. Si estás ansioso por descubrir las herramientas innovadoras que están
+                    transformando la manera en que cultivamos y si buscas maximizar la eficiencia de tus cultivos, ¡este
+                    curso es para ti! Prepárate para adquirir conocimientos en tecnología aplicada a la agricultura,
+                    desde sensores y análisis de datos hasta estrategias de automatización y prácticas sostenibles.
+                    ¡Únete a nosotros para cultivar el mañana hoy mismo!</p>
                 <a href="#" class="cta">Aprende ahora</a>
             </section>
         </section>
@@ -328,7 +340,7 @@
                 <a href="#" class="footer__icons"><img src="./images/youtube.svg" class="footer__img"></a>
             </div>
 
-            <h3 class="footer__copyright">Todos los derechos reservados &copy; TEAM BEA 2023  </h3>
+            <h3 class="footer__copyright">Todos los derechos reservados &copy; TEAM BEA 2023 </h3>
         </section>
     </footer>
 
