correcion etiquetas meta

--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
     <meta property="og:url" content="https://comofueps.github.io/" />
     <meta property="og:title" content="Agricultura inteligente" />
     <meta property="og:description" content="Transformando el futuro de los cultivos" />
-    <meta property="og:image" content="https://comofueps.github.io/images/hero.png" />
+    <meta property="og:image" content="https://comofueps.github.io/images/hero2.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://comofueps.github.io/" />
     <meta property="twitter:title" content="Agricultura inteligente" />
     <meta property="twitter:description" content="Transformando el futuro de los cultivos" />
-    <meta property="twitter:image" content="https://comofueps.github.io/images/hero.png" />
+    <meta property="twitter:image" content="https://comofueps.github.io/images/hero2.png" />
 
     <!-- Meta Tags Generated with https://metatags.io -->
 </head>
