correcion etiqueta meta whatsapp

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <title>Agricultura inteligente</title>
     <meta name="title" content="Agricultura inteligente" />
     <meta name="description" content="Transformando el futuro de los cultivos" />
-    <meta name ="image" content="https://comofueps.github.io/images/hero2.png" />
+    <meta property="og:image" content="https://comofueps.github.io/images/hero2.png" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
