--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
     <meta name="title" content="Agricultura inteligente" />
     <meta name="description" content="Transformando el futuro de los cultivos" />
     <meta property="og:image" content="https://comofueps.github.io/images/hero2.png" />
+    <!-- No need to change anything here -->
+    <meta property="og:type" content="website" />
+    <meta property="og:image:type" content="image/jpeg">
+
+    <!-- Size of image. Any size up to 300. Anything above 300px will not work in WhatsApp -->
+    <meta property="og:image:width" content="300">
+    <meta property="og:image:height" content="300">
+
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
