--- a/index.html
+++ b/index.html
@@ -14,28 +14,17 @@
 
     <meta name="title" content="Aprende Agricultura Inteligente desde cero">
     <meta name="description" content="Transformando el futuro de los cultivos">
-
-
-    <!-- Primary Meta Tags -->
     <title>Agricultura inteligente</title>
     <meta name="title" content="Agricultura inteligente" />
     <meta name="description" content="Transformando el futuro de los cultivos" />
     <meta property="og:image" content="https://comofueps.github.io/images/hero2.png" />
-    <!-- No need to change anything here -->
     <meta property="og:type" content="website" />
-    <meta property="og:image:type" content="image/jpeg">
-
-    <!-- Size of image. Any size up to 300. Anything above 300px will not work in WhatsApp -->
+    <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="300">
     <meta property="og:image:height" content="300">
-
-
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website" />
     <meta property="og:url" content="https://comofueps.github.io/" />
     <meta property="og:title" content="Agricultura inteligente" />
     <meta property="og:description" content="Transformando el futuro de los cultivos" />
-    <meta property="og:image" content="https://comofueps.github.io/images/hero2.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
@@ -45,6 +34,8 @@
     <meta property="twitter:image" content="https://comofueps.github.io/images/hero2.png" />
 
     <!-- Meta Tags Generated with https://metatags.io -->
+
+
 </head>
 
 <body>
