--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </div>
         </nav>
 
-        <section class="hero__container container">
+        <section class="hero__container container fade-in">
             <h1 class="hero__title">Agricultura inteligente</h1>
             <p class="hero__paragraph">Transformando el futuro de los cultivos</p>
             <a href="#" class="cta">Saber más</a>
@@ -80,8 +80,8 @@
     </header>
 
     <main>
-        <section class="container about">
-            <h2 class="subtitle">¿Qué aprenderás en este sitio?</h2>
+        <section class="container fade-in about">
+            <h2 class="subtitle ">¿Qué aprenderás en este sitio?</h2>
             <p class="about__paragraph">Las buenas prácticas para cultivar</p>
 
             <div class="about__main">
@@ -109,7 +109,7 @@
         </section>
 
         <section class="knowledge">
-            <div class="knowledge__container container">
+            <div class="knowledge__container fade-in container">
                 <div class="knowledege__texts">
                     <h2 class="subtitle">Cosecha el Futuro: Curso de Agricultura Inteligente</h2>
                     <p class="knowledge__paragraph">¡Descubre el potencial de la tierra y la tecnología! Domina las
