corriengdo los planes

--- a/index.html
+++ b/index.html
@@ -144,13 +144,13 @@
 
 
                 <div class="price__element price__element--best">
-                    <p class="price__name">Cultivador innovador</p>
-                    <h3 class="price__price">$30.000/mes</h3>
+                    <p class="price__name">Master en Agricultura 4.0</p>
+                    <h3 class="price__price">$140.000/anual</h3>
 
                     <div class="price__items">
-                        <p class="price__features">Automatizacion</p>
-                        <p class="price__features">Analisis de datos</p>
-                        <p class="price__features">Optimizacion</p>
+                        <p class="price__features">IoT (Intenet de las cosas)</p>
+                        <p class="price__features">Agricultura de precisión</p>
+                        <p class="price__features">Sostenibilidad tecnológica</p>
                     </div>
 
                     <a href="#" class="price__cta">Empieza ahora</a>
@@ -158,13 +158,13 @@
 
 
                 <div class="price__element">
-                    <p class="price__name">Master en Agricultura 4.0</p>
-                    <h3 class="price__price">$140.000/mes</h3>
+                    <p class="price__name"> Cultivador innovador</p>
+                    <h3 class="price__price">$30.000/mes</h3>
 
                     <div class="price__items">
-                        <p class="price__features">IoT (Intenet de las cosas)</p>
-                        <p class="price__features">Agricultura de precisión</p>
-                        <p class="price__features">Sostenibilidad tecnológica</p>
+                        <p class="price__features">Automatizacion </p>
+                        <p class="price__features">Analisis de datos </p>
+                        <p class="price__features">Optimizacion</p>
                     </div>
 
                     <a href="#" class="price__cta">Empieza ahora</a>
